# rsprox

./: .gitignore  README.md  build.sh  package-lock.json  package.json  svelte.config.js  vite.config.ts.timestamp-1724862758383-b6f5a023b0e63.mjs
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/prerendered/pages/: index.html
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: index.js  internal.js  proxy.js  ssr.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src/: App.svelte  app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  proxy.rs
src-tauri/src/http/: method.rs  mod.rs  request.rs  response.rs  util.rs
src-tauri/src/proxy/: body.rs  compression.rs  encode.rs  headers.rs  mod.rs  request.rs  response.rs  util.rs
src/features/proxy/: proxy.svelte
src/features/proxy/history/: history.svelte
src/lib/: body.ts  bytes.ts  components.ts  error.ts  exchange.ts  header.ts  proxy.ts  repeater.ts  request.ts  response.ts  theme.scss  util.ts
src/lib/components/CodeEditor/: CodeEditor.svelte  CodeMirror.svelte  theme.ts
src/lib/components/HttpEditor/: BodyEditor.svelte  HeaderEditor.svelte  HttpEditor.svelte  (+2 more)
src/lib/http/: body.ts  header.ts  method.ts  request.ts  response.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/proxy/: proxy.svelte
src/routes/repeater/: repeater.svelte
(+46 files in other folders)
