[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
thiserror = { version = "1.0.47" }
tower = { version = "0.4.13", features = ["full"] }
async-trait = "0.1.73"
bytes = "1.5.0"
futures = "0.3.28"
http = "0.2.9"
flate2 = "1.0.27"
uuid = "1.4.1"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
hyper-tls = "0.5.0"
native-tls = "0.2.11"
tokio-native-tls = "0.3.1"
rcgen = "0.11.2"
hyper-util = { version = "0.1.7", features = ["full"] }
anyhow = "1.0.86"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
